testsuite/tests/tool-ocamlc-compat32/compat32.compilers.reference
File "compat32.ml", line 1:
Error: Generated bytecode unit "compat32.cmo" cannot be used on a 32-bit platform
File "_none_", line 1:
Error: Generated bytecode library "compat32.cma" cannot be used on a 32-bit platform
File "_none_", line 1:
Error: Generated bytecode executable "compat32.byte" cannot be used on a 32-bit platform
